# docs

./: .gitignore  AWESOME.md  AWESOMEs.md  DOCKER.md  README.md  TODO.md
AAA/: README.md
AAA/PCC/: PCEF&PCRF.md  README.md
AAA/RADIUS/: CCA&CCR.md  HowAuthWorks.md  LearnSource.md  README.md  RaduisComponent.md
ALGORITHM/: README.md
ALGORITHM/BreadthFirstSearch/: python Implementation.ipynb
ALGORITHM/Graph/: TopologicalSort.ipynb
BASH/: &&vs;.md  README.md
BLOCKCHAIN/: AMM.md  RAEDME.md  Uniswap.md
CPP/: Virtual.cpp
DATASCIENCE/: Matrix.md  README.md
DB/: normalization.md
DOCKER/: DOCKER.md  Internals.md  TODO.md
GIT/: DetachedHead.md  PushServerSsh.md  git-stash.md  git-tag.md  ignoreGITIGNORE.md
INTERVIEW/: README.md
LINUX/: AWESOME.md  README.md  my_alias.bash  namespace.md  nslookup.md  socket.md
MICROSERVICE/: DBDesign.md  ESB.md  README.md
MONGODB/: GRUP_COMMANDS.md
NETWORKING/: LTEarchitecture.md
NGINX/: NginxVSApache.md  rate-limit.md
POSTGRES/: CONCURRENT_INDEX.md  CTE.sql  Inheritance.pgsql  README.md  SelectFor.sql  Sequance.md  _query_history.sql  performance.md  quorum.md  schema.md  vaccume.md
PYTHON/: AWESOME.md  ____.md  import.md
PYTHON/PythonInDeep/Python3.12/: pyproject.toml
PYTHON/PythonInDeep/Python3.12/subinterpreter/: example1.py
RABBITMQ/: concepts.md
REDIS/: transaction.md
SOAP/: README.md
SOFTWARE/: AWESOME.md  ORM.md  PAXOS.md  PolyglotPersistence.md  README.md  Request-drivenvsEvent-drivenMicroservices.md  SOLID.md  tradingbot.md
VIM/: README.md  UserFullCommand.md
WORDPRESS/: WithDocker.md
(+530 files in other folders)
