[tool.poetry]
name = "python3-12"
version = "1"
description = ""
authors = ["Mahdi Moosavi <seyedmm021@gmail.com>"]
readme = "README.md"
packages = [{include = "python3"}]

[tool.poetry.dependencies]
python = "3.12.1"
ipython = "^8.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
